  Necessary event macros, types and styles mapped accordingly.
- new wxBrush::IsHatch() checking for brush type replaces IS_HATCH macro
- wxProgressDialog accepts smooth gauge again (wxPD_SMOOTH style)
- wxProgressDialog new style: wxPD_CAN_SKIP which provides skipping some parts
  of the progress (with new "Skip" button in dialog)

Unix:

- wxPuts() now correctly outputs trailing new line in Unicode build

wxGTK:

- Added printing support by way of using libgnomeprint. The library
  now checks at runtime, if the library is installed and will use it
  if it is. Otherwise, it will fall back to the old PostScript printing
  code, from which the Pango drawing code was removed.
- Implemented/improved wxDC::DrawRotatedText()
- fixed wxFileDialog::SetWildcard()
- native file dialog is now used if available (Zbigniew Zagorski)
- implemented wxTextCtrl::Freeze() and Thaw(). The GtkTextBuffer
  is not a valid one during frozen state. Get a pointer to it right
  after wxTextCtrl creation if you really need to. (Mart Raudsepp)
- Changed calls to GTK+ 2.4.x functions so that the code checks at
  runtime, which library version is installed so that these functions
  are only called with GTK+ 2.4.x installed and should yield linker
  errors otherwise.
- wxTextCtrl text insertion efficiency fixed. (Mart Raudsepp)
- Added wxRawBitmap support
- Corrected Input method handler code (for Chinese etc.) and its
  interaction with wxWidgets' events.
- wxTE_AUTO_URL implemention for wxGTK2 multiline wxTextCtrls (Mart Raudsepp)

wxMac:

- Vertical sliders oriented consistent with MSW/GTK (0 at top) (Kevin Hock)
- wxDynamicLibrary::GetDllExt() now returns ".bundle", not ".dylib"
- wxDynamicLibrary::GetSymbol() now prepends underscore to the symbol name
- wxJoystick now works on OSX

wxMSW:

- fixed enhanced metafiles loading from files (Andreas Goebel)
- wxRadioButtons no longer have to be consecutive in a group
- fixed spurious selection of combobox text during resize